tests/mvar/reject/arithmetic_in_call.nos
# expect: error
# Arithmetic expression involving mvar and call to mvar function

mvar n: Int = 5

double() = {
    n = n * 2
    n
}

add_and_double() = {
    # UNSAFE: reads n in expression, calls double which writes n
    n + double()
}

main() = {
    add_and_double()
}
